# jupyterhub-python-repo-template

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: release.yaml
docs/: Makefile  make.bat  requirements.txt
docs/source/: changelog.md  conf.py  docs.md  index.md  tests.md
jupyterhub-python-repo-template/: __init__.py
tests/: README.md
