# --- How to change this fie ---
# 1. Search and replace `jupyterhub-python-repo-template` with the name of your repository
# 2. Update the [project] section with details about your project,
#    paying attention to the [project.dependencies] part and
#    list and pin the packages version that your project depends on
# 3. Update the [project.optional-dependencies.test] with the pkg needed to run the tests

# build-system
# - ref: https://peps.python.org/pep-0517/
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# project
# - ref 1: https://peps.python.org/pep-0621/
# - ref 2: https://hatch.pypa.io/latest/config/metadata/#project-metadata
#
[project]
name = "jupyterhub-python-repo-template"
description = "JupyterHub Python repository template"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["jupyterhub"]
authors = [
    {name = "Jupyter Contributors", email = "jupyter@googlegroups.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = [
    # NOTE: If lower bounds are updated, also update our test for the lower
    #       bounds in .github/workflows/test.yaml.
    "jupyterhub>=2.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=5.4",
    "pytest-cov",
    "pytest-asyncio>=0.17",
]

[project.urls]
Documentation = "https://jupyterhub-python-repo-template.readthedocs.io"
Source = "https://github.com/jupyterhub/jupyterhub-python-repo-template"
Issues = "https://github.com/jupyterhub/jupyterhub-python-repo-template/issues"


# black is used for autoformatting Python code
#
# ref: https://black.readthedocs.io/en/stable/
#
[tool.black]
skip-string-normalization = true
# target-version should be all supported versions, see
# https://github.com/psf/black/issues/751#issuecomment-473066811
target_version = [
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
]


# hatch ref: https://hatch.pypa.io/latest/
#
[tool.hatch.version]
path = "jupyterhub-python-repo-template/_version.py"


# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"


# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10"
asyncio_mode = "auto"
# Ignore thousands of tests in dependencies installed in a virtual environment
norecursedirs = "lib lib64"


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
github_url = "https://github.com/jupyterhub/jupyterhub-python-repo-template"

[tool.tbump.version]
current = "0.0.1.dev0"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "jupyterhub-python-repo-template/_version.py"
